Get it working in Docker

--- a/.env
+++ b/.env
@@ -2,4 +2,4 @@ USER_EMAIL=********
 USER_PASSWORD=*********
 AUTH_TOKEN=./.strava-auth-token
 CLIENT_SECRET=*****************************************
-DEBUG=false
+DEBUG=true
